<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Math With Bros</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="negative">-</string>
    <string name="clear">C</string>
    <string name="title_activity_main_game">MainGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_score_screen">ScoreScreen</string>
    <string name="back_to_main">Back to Main Menu</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="start_game">Start a New Game</string>
    <string name="title_activity_your_turn_list_fragment">YourTurnListFragment</string>
    <string name="awaiting_challengers">AWAITING CHALLENGERS</string>
    <string name="title_activity_new_game_list">NewGameListActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="select_a_player">SELECT A PLAYER TO CHALLENGE</string>
    <string name="register_new_account">Register a new account</string>

</resources>
