<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView 
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"/>
    
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />
		    
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />
    
  	<ViewFlipper 
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
  	    <LinearLayout
  	        android:id="@+id/login"
  	        android:layout_width="match_parent"
  	        android:layout_height="match_parent"
  	        android:orientation="vertical" >
		    	    
		    <Button
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/login"
		        android:onClick="login" />
		    
		    <Button
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/register_new_account"
		        android:onClick="switchView" />
	    </LinearLayout>
	    
  	    <LinearLayout
  	        android:id="@+id/register"
  	        android:layout_width="match_parent"
  	        android:layout_height="match_parent"
  	        android:orientation="vertical" >
		   
		    <Button
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/register"
		        android:onClick="register" />
	    </LinearLayout>
    
    </ViewFlipper>
    
    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />
</LinearLayout>
