<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainGame" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
            <TextView
			        android:id="@+id/timer_box"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="0"
			        android:textSize="50sp"
			        android:layout_alignParentLeft="true" />
            
            <TextView
			        android:id="@+id/score_box"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="0"
			        android:textSize="50sp"
			        android:layout_alignParentRight="true" />
        </RelativeLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_gravity="top" >
        
		    <TextView
		        android:id="@+id/question_box"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:textSize="100sp" />
		    
		    <TextView
		        android:id="@+id/answer_box"
		        android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:textSize="100sp"
		        android:singleLine="true"
		        android:gravity="center" />
	    </LinearLayout>
    
    </LinearLayout>
    
	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:gravity="bottom" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
	        <Button
	            android:id="@+id/button1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button1"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
	        <Button
	            android:id="@+id/button2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button2"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
	        <Button
	            android:id="@+id/button3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button3"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
	        </LinearLayout>
	       
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
	        <Button
	            android:id="@+id/button4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button4"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
	        <Button
	            android:id="@+id/button5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button5"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
	        <Button
	            android:id="@+id/button6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button6"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
        </LinearLayout>
        
   	   <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
        
	    	<Button
	            android:id="@+id/button7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button7"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
	        <Button
	            android:id="@+id/button8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button8"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
	        <Button
	            android:id="@+id/button9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button9"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
        </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center" >
	
	        <Button
	            android:id="@+id/negative"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/negative"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
	        <Button
	            android:id="@+id/button0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button0"
	            android:layout_weight="1"
	            android:textSize="35sp" />
	        
	        <Button
	            android:id="@+id/clear"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/clear"
	            android:textSize="35sp" />
	        
	    </LinearLayout>
	    
    </LinearLayout>
    
</LinearLayout>
